<resources>
    <string name="app_name">Kursovaya</string>
    <string name="trenirovkidlyadoma">Тренировки для дома</string>
    <string name="todo">TODO</string>
    <string name="_7_4">Всё тело программа 7х4</string>
    <string name="f_7_4">Нижняя часть тела программа 7х4</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="ff_7_4">Пресс программа 7х4</string>
    <string name="todo">TODO</string>
</resources>